# flounder

./: .gitignore  Cargo.toml  README.md  REFERENCE.md  example_config.toml  nginx.conf  schema.sql
db/: schema.sql
gemini/: index.gmi  index.go
https/: Cargo.toml  example_config.toml
https/src/: admin.rs  baseIndex.gmi  db.rs  gemini.rs  gemtext2html.rs  lib.rs  main.rs  templates.rs
https/src/records/: file.rs  mod.rs  person.rs  twtxt.rs
https/src/routes/: file.rs  mod.rs  person.rs  sign_up_in_out.rs
https/src/templates/: edit.rs  person.rs  sign_up_in_out.rs
https/src/utils/: mod.rs
https/static/: style.css
https/static/styles/: style.css
https/templates/: base.html  edit_file.html  gmi_page.html  header.html  index.html  my_site.html  register.html  statuses.html
https/templates/sign/: in.html  out.html  up.html
src/: Makefile  baseIndex.gmi  client.rs  db.rs  error.rs  escape.rs  gemtext2html.rs  lib.rs  main.rs  templates.rs  twtxt.rs  utils.rs
src/records/: person.rs
src/routes/: file.rs  mod.rs  person.rs  sign_up_in_out.rs
src/templates/: mod.rs  person.rs
src/utils/: escape.rs  gemtext2html.rs  mod.rs
static/: style.css
static/styles/: codemirror.css  style.css
templates/: base.html  baseIndex.txt  edit_file.html  error.html  gmi_page.html  header.html  index.html  login.html  my_site.html  register.html  statuses.html
templates/sign/: out.html  up.html
