[package]
name = "flounder"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

[dependencies]
rusqlite = "0.23.1"
serde = {version="1.0", features=["derive"]}
actix-web = "2.0"
actix-rt = "1.0"
askama = "0.10"
askama_actix = "0.10"
toml = "0.5"
gmi2html = {version="0.1.0", git="https://github.com/alexwennerberg/gmi2html"}
