[package]
name = "flounder"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

[dependencies]
actix-files = "0.2.2"
actix-identity = "0.2.1"
actix-multipart = "0.2"
actix-rt = "1.0"
actix-web = "2.0" 
argh = "0.1.3"
askama = "0.10"
bcrypt = "0.8"
bytes = "0.5.6"
chrono = "0.4.13"
derive_more = "*"
env_logger = "0.7.1"
futures = "0.3.5"
gmi2html = "0.1.6"
rusqlite = "0.23.1"
sanitize-filename = "0.2.1" # TODO audit
serde = {version="1.0", features=["derive"]}
toml = "0.5"
url = "2.1.1"
